# tuxlava

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.ci-archlinux  MAINTAINERS  Makefile  README.md  codespell-ignore-list  mkdocs.yml  pyproject.toml  requirements-dev.txt  tuxlava.PKGBUILD  tuxlava.spec
.github/workflows/: ci.yml
debian/: changelog
docs/: contributing.md  index.md  install-arch.md  run-uninstalled.md  tests.md
support/docker/: tuxlava-ci-images.yml
test/: validate.py
test/device_dicts/: ampereone-ac04.jinja2  ampereone.jinja2  bcm2711-rpi-4-b.jinja2  dragonboard-410c.jinja2  dragonboard-845c.jinja2  fastboot-arm64.jinja2  fastboot-e850-96.jinja2  gs101-oriole.jinja2  juno-r2.jinja2  nfs-grub-x86-64.jinja2  nfs-uboot-arm64.jinja2  orion-o6.jinja2  qrb5165-rb5.jinja2  s32g399a-rdb3.jinja2
test/unit/: test_argparse.py  test_device.py  test_device_dict.py  test_tuxmake.py  test_utils.py
tuxlava/: __init__.py  __main__.py  argparse.py  exceptions.py  jobs.py  requests.py  tuxmake.py  utils.py  yaml.py
tuxlava/devices/: __init__.py  avh.py  fastboot.py  fastboot_generic.py  flasher.py  fvp.py  nfs.py  nfs_bootloader.py  nfs_grub.py  nfs_uboot.py  qemu.py  ssh.py
tuxlava/templates/: __init__.py
tuxlava/templates/devices/: fastboot-base.yaml.jinja2  fastboot.yaml.jinja2  (+6 more)
tuxlava/tests/: __init__.py  commands.py  hackingsession.py  kselftest.py  kunit.py  kvmunittests.py  libgpiod.py  libhugetlbfs.py  ltp.py  mmtests.py  morello.py  perf.py  peripherals.py  rcutorture.py  rttests.py  systemdanalyze.py  v4l2.py  vdso.py  xfstests.py
(+233 files in other folders)
