[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tuxlava"
author = "Senthil Kumaran"
author-email = "senthil.kumaran@linaro.org"
home-page = "https://tuxsuite.com/"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
requires = [
    "jinja2",
    "requests",
    "PyYAML",
]

[tool.flit.metadata.requires-extra]
dev = [
    "black==23.1.0",
    "codespell",
    "flake8",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "tuxpkg",
]

[tool.flit.scripts]
tuxlava = "tuxlava.__main__:main"
