[build-system]
requires = ["flit_core >=3.2,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "tuxlava"
authors = [
    {name = "Senthil Kumaran", email = "senthil.kumaran@linaro.org"},
]
maintainers = [
    {name = "Anders Roxell", email = "anders.roxell@linaro.org"},
    {name = "Ben Copeland", email = "ben.copeland@linaro.org"},
]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "jinja2",
    "requests",
    "PyYAML",
]

[project.urls]
Homepage = "https://tuxlava.org/"

[project.scripts]
tuxlava = "tuxlava.__main__:main"
